<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/supermarket_vector"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="100dp"
        android:inputType="textPersonName"
        android:background="@color/white"
        android:drawableLeft="@drawable/user"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/user_email"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:background="@color/white"
        android:drawableLeft="@drawable/email"
        android:hint="EMAIL"/>



        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:background="@color/white"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/password"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            />




        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:background="@color/white"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/password"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password"/>



    <ProgressBar
        android:id="@+id/loading"
        android:layout_marginTop="38dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/submit_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="@color/white"
            android:text="@string/already_registered"/>


        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:padding="10dp"
            android:textColor="#04ea00"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/login"/>

    </LinearLayout>

</LinearLayout>