<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:padding="15dp"
    app:cardCornerRadius="20dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<ImageView-->
            <!--android:id="@+id/imageView"-->
            <!--android:layout_width="69dp"-->
            <!--android:layout_height="80dp"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_gravity="start"-->
            <!--android:layout_marginStart="6dp"-->
            <!--android:layout_marginLeft="6dp"-->
            <!--android:layout_marginTop="3dp"-->
            <!--android:padding="2dp" />-->


        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:padding="3dp"
            android:text="@string/product"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:text="@string/type"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="57dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_toStartOf="@+id/btnAdd"
            android:layout_toLeftOf="@+id/btnAdd"
            android:gravity="center"
            android:text="@string/init"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="24dp"
            android:layout_height="21dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="57dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="3dp"
            android:layout_toStartOf="@+id/tvQuantity"
            android:layout_toLeftOf="@+id/tvQuantity"
            android:background="@drawable/sub" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="23dp"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"
            android:background="@drawable/add" />

        <Button
            android:id="@+id/addToCart"
            android:layout_width="28dp"
            android:layout_height="31dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="41dp"
            android:layout_marginRight="41dp"
            android:background="@drawable/shoppingcart" />

    </RelativeLayout>


</android.support.v7.widget.CardView>